[project]
name = "langflow"
version = "1.3.1"
description = "A Python package with a built-in web application"
requires-python = ">=3.10,<3.13"
license = "MIT"
keywords = ["nlp", "langchain", "openai", "gpt", "gui"]
readme = "README.md"
# Define your main dependencies here
dependencies = [
    "langflow-base==0.3.1",
    "beautifulsoup4==4.12.3",
    "google-search-results>=2.4.1,<3.0.0",
    "google-api-python-client==2.154.0",
    "huggingface-hub[inference]>=0.23.2,<1.0.0",
    "networkx==3.4.2",
    "fake-useragent==1.5.1",
    "pyarrow==19.0.0",
    "wikipedia==1.4.0",
    "qdrant-client==1.9.2",
    "weaviate-client==4.10.2",
    "faiss-cpu==1.9.0.post1",
    "types-cachetools==5.5.0.20240820",
    "pymongo==4.10.1",
    "supabase==2.6.0",
    "certifi>=2023.11.17,<2025.0.0",
    "certifi==2024.8.30",
    "fastavro==1.9.7",
    "redis==5.2.1",
    "metaphor-python==0.1.23",
    'pywin32==307; sys_platform == "win32"',
    "langfuse==2.53.9",
    "metal_sdk==2.5.1",
    "MarkupSafe==3.0.2",
    "boto3==1.34.162",
    "numexpr==2.10.2",
    "qianfan==0.3.5",
    "pgvector==0.3.6",
    "langchain==0.3.10",
    "elasticsearch==8.16.0",
    "pytube==15.0.0",
    "dspy-ai==2.5.41",
    "assemblyai==0.35.1",
    "litellm==1.60.2",
    "chromadb==0.5.23",
    "zep-python==2.0.2",
    "youtube-transcript-api==0.6.3",
    "Markdown==3.7",
    "upstash-vector==0.6.0",
    "GitPython==3.1.43",
    "kubernetes==31.0.0",
    "json_repair==0.30.3",
    "langwatch==0.1.16",
    "langsmith==0.1.147",
    "yfinance==0.2.50",
    "wolframalpha==5.1.3",
    "astra-assistants[tools]~=2.2.11",
    "composio-langchain==0.7.12",
    "composio-core==0.7.12",
    "spider-client==0.1.24",
    "nltk==3.9.1",
    "lark==1.2.2",
    "jq==1.8.0",
    "pydantic-settings==2.4.0",
    "ragstack-ai-knowledge-store==0.2.1",
    "duckduckgo_search==7.2.1",
    "opensearch-py==2.8.0",
    "langchain-google-genai==2.0.6",
    "langchain-cohere==0.3.3",
    "langchain-anthropic==0.3.0",
    "langchain-astradb==0.5.3",
    "langchain-openai==0.2.12",
    "langchain-google-vertexai==2.0.7",
    "langchain-groq==0.2.1",
    "langchain-pinecone==0.2.2",
    "langchain-mistralai==0.2.3",
    "langchain-chroma==0.1.4",
    "langchain-aws==0.2.7",
    "langchain-unstructured==0.1.5",
    "langchain-milvus==0.1.7",
    "langchain-mongodb==0.2.0",
    "langchain-nvidia-ai-endpoints==0.3.8",
    "langchain-google-calendar-tools==0.0.1",
    "langchain-google-community==2.0.3",
    "langchain-elasticsearch==0.3.0",
    "langchain-ollama==0.2.1",
    "langchain-sambanova==0.1.0",
    "langchain-community~=0.3.10",
    "sqlalchemy[aiosqlite]>=2.0.38,<3.0.0",
    "atlassian-python-api==3.41.16",
    "mem0ai==0.1.34",
    "needle-python>=0.4.0",
    "aiofile>=3.9.0,<4.0.0",
    "sseclient-py==1.8.0",
    "arize-phoenix-otel>=0.6.1",
    "openinference-instrumentation-langchain>=0.1.29",
    "crewai==0.102.0",
    "mcp>=0.9.1",
    "uv>=0.5.7",
    "webrtcvad>=2.0.10",
    "scipy>=1.14.1",
    "ag2>=0.1.0",
    "scrapegraph-py>=1.12.0",
    "pydantic-ai>=0.0.19",
    "smolagents>=1.8.0",
    "apify-client>=1.8.1",
    "pylint>=3.3.4",
    "ruff>=0.9.7",
    "langchain-graph-retriever==0.6.1",
    "graph-retriever==0.6.1",
    "ibm-watsonx-ai>=1.3.1",
    "langchain-ibm>=0.3.8",
    "opik>=1.6.3",
    "openai>=1.68.2",
]

[tool.poetry]
package-mode = false
